--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
-            android:visibility="gone">
+            >
 
 
             <TextView
@@ -90,11 +90,56 @@
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp" />
 
-            <ImageView
-                android:id="@+id/franchise_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"/>
+            <FrameLayout
+                android:id="@+id/franchise_images_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="16dp">
+
+                <!-- Левый задний постер -->
+                <ImageView
+                    android:id="@+id/franchise_image_left"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="40dp"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center_vertical|start"
+                    android:alpha="0.7"
+                    app:srcCompat="@drawable/adventure_time"
+                    android:background="@drawable/rounded_image"
+                    android:clipToOutline="true"
+                    android:translationZ="1dp"
+                    android:elevation="1dp" />
+
+                <!-- Правый задний постер -->
+                <ImageView
+                    android:id="@+id/franchise_image_right"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginStart="40dp"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center_vertical|end"
+                    android:alpha="0.7"
+                    android:background="@drawable/rounded_image"
+                    android:clipToOutline="true"
+                    app:srcCompat="@drawable/adventure_time"
+                    android:translationZ="1dp"
+                    android:elevation="1dp" />
+
+                <!-- Центральный главный постер -->
+                <ImageView
+                    android:id="@+id/franchise_image_center"
+                    android:layout_width="125dp"
+                    android:layout_height="175dp"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center"
+                    android:background="@drawable/rounded_image"
+                    android:clipToOutline="true"
+                    app:srcCompat="@drawable/adventure_time"
+                    android:translationZ="5dp"
+                    android:elevation="5dp" />
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/franchise_info"
